# Continuum_algo

./: MCP_SETUP.md  WEB_INTERFACE_PLAN.md  continuum_checklist.md
continuum-golf-simulator/: Cargo.toml  PHASE6_SUMMARY.md  REALISTIC_EXPLOIT_ANALYSIS.md  SECURITY_FINDINGS.md  SECURITY_FIXES_APPLIED.md  TESTING_NOTE.md  demo_heatmap_phase4.csv  demo_pmax_history_phase4.csv  demo_session_phase4.csv  demo_venue_phase4.json  test_debug.rs  test_player.csv
continuum-golf-simulator/benches/: simulation_bench.rs
continuum-golf-simulator/examples/: demo_phase2.rs  demo_phase3.rs  demo_phase4.rs
continuum-golf-simulator/src/: anti_cheat.rs  lib.rs  main.rs
continuum-golf-simulator/src/analytics/: export.rs  metrics.rs  mod.rs
continuum-golf-simulator/src/config/: constants.rs  mod.rs
continuum-golf-simulator/src/math/: distributions.rs  integration.rs  kalman.rs  mod.rs
continuum-golf-simulator/src/models/: hole.rs  mod.rs  player.rs  shot.rs
continuum-golf-simulator/src/simulators/: mod.rs  player_session.rs  tournament.rs  venue.rs
continuum-golf-simulator/tests/: anti_cheat_tests.rs  integration_tests.rs  validation_tests.rs
