[package]
name = "continuum-golf-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Ian Sabia"]
description = "Continuum Golf wagering simulator in Rust - models odds engine, Kalman filter skill adaptation, and venue economics"
license = "MIT"

[[bin]]
name = "continuum-golf-simulator"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
statrs = "0.17"
nalgebra = "0.33"
rayon = "1.10"
colored = "2.1"
indicatif = "0.17"
prettytable-rs = "0.10"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "simulation_bench"
harness = false
